## Process this file with automake to produce Makefile.in

## $Id: Makefile.am 2507 2009-10-17 16:24:02Z matsunaga $

SUBDIRS =

CLEANFILES = ymtools.h

MAINTAINERCLEANFILES = Makefile.in

noinst_HEADERS = \
	acc_user.h \
	mainpage.h \
	veriuser.h \
	vpi_user.h \
	ymassert.h \
	ymmath.h \
	ymnsdef.h
