## Process this file with automake to produce Makefile.in

## $Id: Makefile.am 2275 2009-06-10 10:56:15Z matsunaga $

SUBDIRS =

CLEANFILES =

MAINTAINERCLEANFILES = Makefile.in 

installed_m4 = \
	ymlibs.m4

EXTRA_DIST += $(installed_m4)

m4datadir = $(datadir)/aclocal
m4data_DATA = $(installed_m4)
